Fix path and test for 200
